[package]
name = "keyring-jni"
version = "0.1.0"
authors = ["andrew.douglas <andrew.douglas.ctr@nrlssc.navy.mil>", "dakota.maulding <brandon.maulding@nrlssc.navy.mil>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
keyring = "0.10.1"
jni = "0.18.0"

[lib]
crate_type = ["cdylib"]