[package]
name = "keyring-jni"
version = "0.1.0"
authors = ["Andrew Douglas <andrewrobertdouglas@gmail.com>", "Dakota Maulding <dakota.maulding+gitlab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
keyring = "0.10.1"
jni = "0.18.0"

[lib]
crate_type = ["cdylib"]
